--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: WPEssential Theme
+Theme Name: WPEssential Theme Pro
 Theme URI: https://wpessnetial.org/
 Author: WPEssential
 Author URI; https://wpessential.org/
