--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: WPEssential Theme
+Theme Name: WPEssential Hero Theme
 Theme URI: https://wpessnetial.org/
 Author: WPEssential
 Author URI; https://wpessential.org/
@@ -8,6 +8,6 @@ Version: 1.0.0
 Requires at least: 5.5
 Requires PHP: 7.4
 Tags: one-column, two-columns, right-sidebar, left-sidebar, full-width. sticky-post, custom-background, custom-menu, editor-style, featured-images, translation-ready, custom-header, customizer, elementor, wpbakery,
-Text Domain: wpessential-theme
+Text Domain: wpessential-hero-theme
 Domain Path: /languages
 */
